refactor: complete layer architecture (controller-service-repository)